<resources>
    <string name="app_name">RP Food</string>
    <string name="facebook_app_id">2293136407577154</string>
    <string name="fb_login_protocol_scheme">fb2293136407577154</string>


    Mensagens:
    <string name="cancel_login">Operação cancelada.</string>
    <string name="error_login">Erro ao logar.</string>
    <string name="logout">Deslogado com sucesso.</string>
    <string name="bem_vindo">Seja Bem-Vindo!</string>
    <string name="suc_cadastro">Cadastrado com sucesso.</string>
    ***OLHAR ONDE TÁ:
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    Tela Login:
    <string name="edtUser">E-mail / Matrícula</string>
    <string name="edtPass">Senha</string>
    <string name="entrarButton">ENTRAR</string>
    <string name="btnCadastrar">Cadastre-se</string>
    <string name="msg1">Ainda não possui uma conta? </string>


    Página de Cadastro:
    <string name="msg2">Registre-se:</string>
    <string name="edtName">Nome de exibição</string>
    <string name="edtMatricula">Matrícula</string>
    <string name="edtEmail">E-mail</string>
    <string name="edtSenha">Senha</string>
    <string name="buttonCadastro">Cadastrar</string>
    <string name="btnEntrar">Entrar</string>
    <string name="msg3">Já possui uma conta? </string>

    Tela 1:
    <string name="cardapioBtn">Cardápio Semanal</string>
    <string name="btnAvaliar">Avaliar</string>

    Tela Perfil:
    <string name="btnSalvar">Salvar</string>
    <string name="btnVoltar"></string>
    <string name="salvo_suc">Salvo com sucesso!</string>


    PopUp Avaliação:
    <string name="op_enviada">Sua opinião foi enviada. Obrigada!</string>
    <string name="txtTint">Qual o motivo da sua nota?</string>
    <string name="cbSal1">Salada 1</string>
    <string name="cbSal2">Salada 2</string>
    <string name="cbPrinc">Prato Principal</string>
    <string name="cbGuarn">Guarnição</string>
    <string name="cbSuco">Suco</string>
    <string name="cbSobremesa">Sobremesa</string>
    <string name="cbNada">Não opinar</string>
    <string name="btnEnviar">Enviar</string>






    Tela IF:
    <string name="ifButton">Restaurante Universitário IF - Rio Pomba</string>


    Menu:
    <string name="sobre_app">Sobre o App</string>
    <string name="perfil_menu">Perfil</string>
    <string name="sair_menu">Sair</string>


    Sobre o app:
    <string name="telefone">(32)99818-7070</string>


</resources>
