<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:src="@drawable/banner"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/msg2"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:id="@+id/msg2" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimaryDark"
            android:hint="@string/edtName"
            android:padding="12dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:inputType="text"
            android:id="@+id/edtNome" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimaryDark"
            android:hint="@string/edtMatricula"
            android:padding="12dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:inputType="number"
            android:id="@+id/edtMatricula" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimaryDark"
            android:hint="@string/edtEmail"
            android:padding="12dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:inputType="textEmailAddress"
            android:id="@+id/edtEmail" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimaryDark"
            android:hint="@string/edtSenha"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:id="@+id/edtSenha" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@android:color/white"
            android:text="@string/buttonCadastro"
            android:textColor="#009688"
            android:id="@+id/buttonCadastro" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:weightSum="1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg3"
            android:textColor="@android:color/white"
            android:id="@+id/msg3" />

        <Button
            android:layout_height="wrap_content"
            android:text="@string/btnEntrar"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:id="@+id/btnEntrar"
            android:backgroundTint="#0000695C"
            android:textAllCaps="false"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textSize="14sp"
            android:layout_weight="0.11"
            android:layout_width="50dp"
            tools:ignore="InefficientWeight" />

    </LinearLayout>

</RelativeLayout>